# ice_halo_sim

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PR_SUMMARY.md  README.md  README_zh.md  THIRD_PARTY.md  build.sh  config_example.json  pyproject.toml  version.py
bench/: CMakeLists.txt  bench_crystal.cpp  bench_filter.cpp  bench_geom_closedform.cpp  bench_optics.cpp  bench_scene.cpp  bench_sim.cpp  data.js  index.html
cpp/: .clang-format  .clang-tidy  .doxygen-config  .gitignore  CMakeLists.txt  README.md  README_zh.md  build.sh  config-example.json  config.json  config_example.json  format.sh  geometry.cpp  geometry.h  linearalgebra.cpp  linearalgebra.h  main.cpp  optics.cpp  optics.h  test.cpp  testhelper.cpp  testhelper.h  v3_config_example.json
cpp/FastHalo/: .clang-format  FastHalo.pro  closabletabwidget.cpp  closabletabwidget.h  cursortable.cpp  cursortable.h  customwidgets.cpp  customwidgets.h  datamodel.h  floatlineedit.cpp  floatlineedit.h  guidata.cpp  guidata.h  iconbutton.cpp  iconbutton.h  icons.cpp  icons.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewwindow.cpp  previewwindow.h  previewwindow.ui  spinboxdelegate.cpp  spinboxdelegate.h  ui.qrc
cpp/bench/: CMakeLists.txt  bench_optics.cpp  bench_scene.cpp  bench_sim.cpp
cpp/doc/: README.md  architecture.md  c_api.md  configuration.md  design_uml.txt  developer-guide.md
cpp/figs/: irr.nb
cpp/src/: CMakeLists.txt  context.cpp  context.h  crystal.cpp  crystal.h  endless_main.cpp  file.cpp  file.h  files.cpp  files.h  geometry.cpp  geometry.h  linearalgebra.cpp  linearalgebra.h  main.c  main.cpp  main_v3.cpp  main_v3_c.c  math.cpp  math.h  mymath.cpp  mymath.h  obj_pool.cpp  obj_pool.h  optics.cpp  optics.h  processhelper.cpp  processhelper.h  ray_hit_generator.cpp  ray_prop_generator.cpp  render.cpp  render.h  render_main.cpp  serialize.h  simulation.cpp  simulation.h  testhelper.cpp  testhelper.h  threadingpool.cpp  threadingpool.h  (+1 more)
cpp/test/: CMakeLists.GoogleTest.cmake  CMakeLists.txt  CMakeLists.txt.in  bench_math.cpp  bench_optics.cpp  benchmark_config_template.json  config_01.json  ray_tracing_test.py  run_bench.py  run_ray_tracing_test.py  test_context.cpp  test_crystal.cpp  test_json.cpp  test_main.cpp  test_math.cpp  test_optics.cpp  test_proj.cpp  test_ray_tracing_main.cpp  test_rng.cpp  test_serialize.cpp  test_v3.cpp  test_v3_crystal.cpp  test_v3_json.cpp  test_v3_math.cpp  test_v3_proj.cpp
src/: CMakeLists.txt  main.c  main.cpp
src/config/: color_class_table.cpp  color_class_table.hpp  color_gate_table.cpp  color_gate_table.hpp  component_color_map.cpp  component_color_map.hpp  component_table.cpp  component_table.hpp  config_compare.hpp  config_manager.cpp  config_manager.hpp  crystal_config.cpp  crystal_config.hpp  filter_config.cpp  filter_config.hpp  light_config.cpp  light_config.hpp  proj_config.cpp  proj_config.hpp  raypath_color_config.cpp  raypath_color_config.hpp  raypath_validation.cpp  raypath_validation.hpp  render_config.cpp  render_config.hpp  sim_data.cpp  sim_data.hpp
src/core/: beam_tracer.cpp  beam_tracer.hpp  buffer.hpp  color_util.hpp  cpu_trace_backend.cpp  cpu_trace_backend.hpp  crystal.cpp  crystal.hpp  crystal_kind.hpp  def.hpp  device_filter_desc.cpp  device_filter_desc.hpp  exit_seam.hpp  filter.cpp  filter.hpp  filter_spec.cpp  filter_spec.hpp  geo3d.cpp  geo3d.hpp  geo3d_closedform.cpp  geo3d_closedform.hpp  lat_lut.cpp  lat_lut.hpp  lens_proj.hpp  lens_proj_build.hpp  math.cpp  math.hpp  metal_filter_match_src.hpp  metal_filter_match_src.mm  metal_trace_backend.hpp  metal_trace_backend.mm  optics.cpp  optics.hpp  projection.cpp  projection.hpp  raypath.cpp  raypath.hpp  scatter_accum.hpp  simulator.cpp  simulator.hpp  (+3 more)
src/gui/: CMakeLists.txt  Info.plist.in  app.cpp  app.hpp  app_panels.cpp  axis_presets.hpp  color_window.cpp  color_window.hpp  composite_exposure_push.hpp  crystal_preview.cpp  crystal_preview.hpp  crystal_renderer.cpp  crystal_renderer.hpp  destructive_style.cpp  destructive_style.hpp  edit_modals.cpp  edit_modals.hpp  export_fbo_renderer.cpp  export_fbo_renderer.hpp  fa_solid_900_embed.h  face_number_overlay.cpp  face_number_overlay.hpp  file_io.cpp  file_io.hpp  font_init.hpp  gl_capture.hpp  gl_common.h  gl_init.cpp  gl_init.h  gui_constants.hpp  gui_ev_auto.hpp  gui_logger.hpp  gui_state.hpp  gui_state_reconcile.cpp  gui_state_reconcile.hpp  gui_state_tiers.hpp  imgui_te_stubs.cpp  link_padding.cpp  log_sink.hpp  lumice.rc.in  (+18 more)
src/include/: lumice.h  lumice_config_scope.hpp
src/server/: c_api.cpp  c_api_internal.hpp  component_compositor.cpp  component_compositor.hpp  consumer.hpp  ray_num_semantics.hpp  render.cpp  render.hpp  server.cpp  server.hpp  show_rays.cpp  stats.cpp  stats.hpp
src/util/: arg_parser.cpp  arg_parser.hpp  bit_utils.hpp  callback_sink.hpp  color_data.hpp  color_space.cpp  color_space.hpp  cpu_info.cpp  cpu_info.hpp  env_knobs.cpp  env_knobs.hpp  illuminant.cpp  illuminant.hpp  logger.hpp  path_utils.hpp  queue.hpp  spdlog_levels.hpp  threading_pool.hpp
test/: CMakeLists.txt  cpu_test_helpers.hpp  cuda_test_helpers.hpp  metal_test_helpers.hpp  test_axis_presets.cpp  test_beam_tracer.cpp  test_c_api.cpp  test_color_space.cpp  test_config_manager.cpp  test_config_snapshot.cpp  test_cpu_info.cpp  test_cpu_trace_backend.cpp  test_crystal.cpp  test_ev_auto.cpp  test_exit_records.cpp  test_filter.cpp  test_filter_spec.cpp  test_geo3d.cpp  test_integration_main.cpp  test_json.cpp  test_main.cpp  test_metal_filter_match_parity.mm  test_metal_root_gen.cpp  test_metal_trace_backend.cpp  test_metal_trace_parity.cpp  test_optics.cpp  test_proj.cpp  test_projection.cpp  test_queue.cpp  test_raypath_segments.cpp  test_reduce_raypath_audit.cpp  test_render_config.cpp  test_rng.cpp  test_sim_data.cpp  test_simulator.cpp  test_slider_mapping.cpp  test_threading_pool.cpp  test_window_sizing.cpp
test/e2e-correctness/: test_cli.py  test_composition_equivalence.py  test_raypath_color.py  (+5 more)
(+530 files in other folders)
